--- a/frontend/src/components/icon-button/SimpleIconButton/SimpleIconButton.module.css
+++ b/frontend/src/components/icon-button/SimpleIconButton/SimpleIconButton.module.css
@@ -8,7 +8,7 @@
 
         border-style: none;
 
-        color: rgb(var(--color-on-surface-variant));
+        color: currentColor;
         background-color: transparent;
     }
 
