--- a/frontend/src/assets/styles/variables/size.module.css
+++ b/frontend/src/assets/styles/variables/size.module.css
@@ -43,7 +43,10 @@
     --size-16: 5rem;
     --size-17: 6rem;
     --size-18: 7rem;
+    --size-23: 23rem;
     --size-25: 25rem;
+    --size-26: 26rem;
+    --size-36: 36rem;
 
     --size-target: var(--size-12);
     --size-state-layer: var(--size-11);
