--- a/frontend/src/components/form-inputs/TextField/TextField.module.css
+++ b/frontend/src/components/form-inputs/TextField/TextField.module.css
@@ -173,7 +173,7 @@
         display: flex;
         flex-direction: row;
         justify-content: flex-start;
-        align-items: center;
+        align-items: flex-start;
         gap: var(--padding-1);
     }
 
