feat: add keyboard navigation in navigationDrawer
It is possible to navigate using the arrows and activate the link with
the spacebar.

--- a/frontend/src/assets/styles/variables/size.module.css
+++ b/frontend/src/assets/styles/variables/size.module.css
@@ -43,6 +43,7 @@
     --size-16: 5rem;
     --size-17: 6rem;
     --size-18: 7rem;
+    --size-22: 22.5rem;
     --size-23: 23rem;
     --size-25: 25rem;
     --size-26: 26rem;
