refactor: create NavigationList
Regroup all navigation type to avoid code ducplication.

--- a/frontend/src/layouts/Navigation/NavigationItem/NavigationItem.module.css
+++ b/frontend/src/layouts/Navigation/NavigationItem/NavigationItem.module.css
@@ -4,52 +4,17 @@
         isolation: isolate;
     }
 
-    .navigationBarItem {
-        composes: navigationItem, label-medium from '../../../assets/styles/patterns/typography.module.css';
-
-        flex-grow: 1;
-        flex-basis: var(--size-18);
-
-        --padding-block-start: var(--padding-3);
-    }
-
-    .navigationBarItem .link {
-        padding-block-start: var(--padding-block-start);
-        padding-block-end: var(--padding-4);
-
-        height: 100%;
-
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-
+    .link {
         color: rgb(var(--color-on-surface-variant));
     }
 
-    .navigationBarItem .icon {
-        height: var(--size-10);
-        width: var(--size-14);
-        border-radius: var(--border-radius-5);
-
-        background-color: rgb(
-            var(--state-bg-color, var(--color-on-surface-variant)) /
-                var(--state-bg-opacity, 0)
-        );
-
+    .icon {
         display: grid;
         place-content: center;
     }
 
-    .navigationBarItem .activeIndicator {
-        height: var(--size-10);
-        width: var(--size-14);
-        border-radius: var(--border-radius-5);
-
+    .activeIndicator {
         position: absolute;
-        top: var(--padding-block-start);
-        left: 50%;
-        translate: -50%;
         z-index: var(--layer-00);
     }
 
@@ -82,6 +47,49 @@
         background-color: rgb(var(--color-secondary-container));
     }
 
+    /* Navigation bar version */
+    .navigationBarItem {
+        composes: navigationItem, label-medium from '../../../assets/styles/patterns/typography.module.css';
+
+        flex-grow: 1;
+        flex-basis: var(--size-18);
+
+        --padding-block-start: var(--padding-3);
+    }
+
+    .navigationBarItem .link {
+        padding-block-start: var(--padding-block-start);
+        padding-block-end: var(--padding-4);
+
+        height: 100%;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .navigationBarItem .icon {
+        height: var(--size-10);
+        width: var(--size-14);
+        border-radius: var(--border-radius-5);
+
+        background-color: rgb(
+            var(--state-bg-color, var(--color-on-surface-variant)) /
+                var(--state-bg-opacity, 0)
+        );
+    }
+
+    .navigationBarItem .activeIndicator {
+        height: var(--size-10);
+        width: var(--size-14);
+        border-radius: var(--border-radius-5);
+
+        top: var(--padding-block-start);
+        left: 50%;
+        translate: -50%;
+    }
+
     /* Navigation rail version */
     .navigationRailItem {
         composes: navigationItem, label-medium from '../../../assets/styles/patterns/typography.module.css';
@@ -95,8 +103,6 @@
         justify-content: space-between;
         align-items: center;
         gap: var(--padding-1);
-
-        color: rgb(var(--color-on-surface-variant));
     }
 
     .navigationRailItem .icon {
@@ -108,9 +114,6 @@
             var(--state-bg-color, var(--color-on-surface-variant)) /
                 var(--state-bg-opacity, 0)
         );
-
-        display: grid;
-        place-content: center;
     }
 
     .navigationRailItem .activeIndicator {
@@ -118,11 +121,9 @@
         width: var(--size-13);
         border-radius: var(--border-radius-5);
 
-        position: absolute;
         top: 0;
         left: 50%;
         translate: -50%;
-        z-index: var(--layer-00);
     }
 
     /* Navigation drawer version */
@@ -151,16 +152,9 @@
         );
     }
 
-    .navigationDrawerItem .icon {
-        display: grid;
-        place-content: center;
-    }
-
     .navigationDrawerItem .activeIndicator {
         border-radius: var(--border-radius-6);
 
-        position: absolute;
         inset: 0;
-        z-index: var(--layer-00);
     }
 }
