--- a/frontend/src/components/buttons/FAB/FAB.module.css
+++ b/frontend/src/components/buttons/FAB/FAB.module.css
@@ -17,8 +17,16 @@
         box-shadow: var(--elevation-3);
     }
 
+    .fab[data-low] {
+        box-shadow: var(--elevation-1);
+    }
+
     .fab:hover {
         box-shadow: var(--elevation-4);
+    }
+
+    .fab:hover[data-low] {
+        box-shadow: var(--elevation-2);
     }
 
     .extendedFab {
