--- a/frontend/src/layouts/Navigation/NavigationSection.module.css
+++ b/frontend/src/layouts/Navigation/NavigationSection.module.css
@@ -5,9 +5,7 @@
         width: 100%;
         height: var(--size-16);
         background-color: rgb(var(--color-surface-container));
-        position: fixed;
-        bottom: 0;
-        left: 0;
+        position: relative;
     }
 
     .fab {
@@ -19,7 +17,8 @@
 
     @media bp-medium {
         .container {
-            padding-block: var(--size-16);
+            padding-block-start: var(--padding-4);
+            padding-block-end: var(--size-16);
             width: var(--size-16);
             height: 100%;
             background-color: rgb(var(--color-surface));
@@ -28,7 +27,7 @@
             flex-direction: column-reverse;
             justify-content: space-between;
             align-items: center;
-            gap: var(--size-16);
+            gap: var(--size-13);
         }
 
         .fab {
@@ -47,11 +46,12 @@
             background-color: rgb(var(--color-surface));
             border-radius: 0 var(--border-radius-5) var(--border-radius-5) 0;
 
-            overflow: hidden;
-
-            justify-content: flex-end;
             align-items: stretch;
             gap: var(--size-13);
+        }
+
+        .navigation {
+            flex-grow: 1;
         }
 
         .fab {
