fix: fix bugs in the infinite post feed
Fix load on scroll not working:
Since a ref was used, the child components were not rerendered when the
parent ref got its value.

Fix authentication error when loading posts:
Prevent fetching when an unauthenticated user tries to access the home
page, redirects directly to the login page without rendering anything.

Change error handling from ErrorBoundary to useEffect:
ErrorBoundary's methods can't be used to redirect the user. Instead,
create a hook useHandleRequestError that handles these cases.
Also add error handling for the like action.

--- a/frontend/src/features/posts/Posts/Post.module.css
+++ b/frontend/src/features/posts/Posts/Post.module.css
@@ -1,4 +1,4 @@
-@value expanded as bp-expanded, medium as bp-medium from "../../assets/styles/variables/breakpoints.module.css";
+@value expanded as bp-expanded, medium as bp-medium from "../../../assets/styles/variables/breakpoints.module.css";
 
 @layer components {
     .post {
@@ -58,11 +58,11 @@
     }
 
     .author {
-        composes: title-small from '../../assets/styles/patterns/typography.module.css';
+        composes: title-small from '../../../assets/styles/patterns/typography.module.css';
     }
 
     .date {
-        composes: body-small from '../../assets/styles/patterns/typography.module.css';
+        composes: body-small from '../../../assets/styles/patterns/typography.module.css';
 
         color: rgb(var(--color-on-surface-variant));
     }
@@ -76,7 +76,7 @@
     }
 
     .likeNumber {
-        composes: label-large from '../../assets/styles/patterns/typography.module.css';
+        composes: label-large from '../../../assets/styles/patterns/typography.module.css';
 
         color: rgb(var(--color-on-surface-variant));
     }
@@ -105,11 +105,11 @@
     }
 
     .title {
-        composes: title-medium from '../../assets/styles/patterns/typography.module.css';
+        composes: title-medium from '../../../assets/styles/patterns/typography.module.css';
     }
 
     .message {
-        composes: body-medium from '../../assets/styles/patterns/typography.module.css';
+        composes: body-medium from '../../../assets/styles/patterns/typography.module.css';
     }
 
     .image {
