--- a/frontend/src/features/posts/PostsList/PostsList.module.css
+++ b/frontend/src/features/posts/PostsList/PostsList.module.css
@@ -1,4 +1,4 @@
-@value expanded as bp-expanded, medium as bp-medium from "../../assets/styles/variables/breakpoints.module.css";
+@value expanded as bp-expanded, medium as bp-medium from "../../../assets/styles/variables/breakpoints.module.css";
 
 @layer components {
     .postsList {
