--- a/frontend/src/assets/styles/variables/reference-variables.module.css
+++ b/frontend/src/assets/styles/variables/reference-variables.module.css
@@ -240,3 +240,7 @@
     --ref-color-palette-error99: 255 251 255;
     --ref-color-palette-error100: 255 255 255;
 }
+
+::backdrop {
+    --ref-color-key-black: 0 0 0;
+}
