--- a/frontend/src/features/posts/PostsList/PostsList.module.css
+++ b/frontend/src/features/posts/PostsList/PostsList.module.css
@@ -4,8 +4,12 @@
     .postsList {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: stretch;
         gap: var(--padding-8);
+    }
+
+    .busy {
+        align-self: center;
     }
 
     @media bp-medium {
