feat: create the Dialog components
Also create the fullscreen version

--- a/frontend/src/assets/styles/variables/size.module.css
+++ b/frontend/src/assets/styles/variables/size.module.css
@@ -43,11 +43,13 @@
     --size-16: 5rem;
     --size-17: 6rem;
     --size-18: 7rem;
+    --size-19: 17.5rem;
     --size-22: 22.5rem;
     --size-23: 23rem;
     --size-25: 25rem;
     --size-26: 26rem;
     --size-34: 34rem;
+    --size-35: 35rem;
     --size-36: 36rem;
     --size-68: 68rem;
 
