--- a/frontend/src/components/Lightbox/Lightbox.module.css
+++ b/frontend/src/components/Lightbox/Lightbox.module.css
@@ -49,8 +49,8 @@
         }
 
         .image {
-            max-width: 80vw;
-            max-height: 80vh;
+            max-width: 80dvw;
+            max-height: 80dvh;
         }
     }
 }
