--- a/frontend/src/components/FullscreenDialog/FullscreenDialog.module.css
+++ b/frontend/src/components/FullscreenDialog/FullscreenDialog.module.css
@@ -21,7 +21,6 @@
 
         padding-inline-start: var(--padding-1);
         padding-inline-end: var(--padding-3);
-        margin-block-end: var(--size-8);
     }
 
     .headline {
@@ -32,5 +31,14 @@
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
+    }
+
+    .content {
+        padding-block-start: var(--padding-6);
+        height: 100%;
+    }
+
+    .largeScreenDialog {
+        width: var(--size-35);
     }
 }
