--- a/frontend/src/features/posts/CreatePostDialog/CreatePostDialog.module.css
+++ b/frontend/src/features/posts/CreatePostDialog/CreatePostDialog.module.css
@@ -1,4 +1,21 @@
 @value expanded as bp-expanded, medium as bp-medium from "../../../assets/styles/variables/breakpoints.module.css";
 
 @layer components {
+    .form {
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        gap: var(--padding-4);
+    }
+
+    .requestLoader {
+        position: absolute;
+        inset: 0;
+        z-index: var(--layer-5);
+
+        background-color: rgb(var(--color-scrim) / 0.3);
+
+        display: grid;
+        place-content: center;
+    }
 }
