feat: add image submission for posts

--- a/frontend/src/components/form-inputs/ImageField/ImageField.module.css
+++ b/frontend/src/components/form-inputs/ImageField/ImageField.module.css
@@ -8,6 +8,12 @@
         position: relative;
     }
 
+    .inputCommand {
+        display: flex;
+        flex-direction: column;
+        gap: var(--padding-1);
+    }
+
     .previewContainer {
         position: relative;
     }
